--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,562 @@
-.App {
-  text-align: center;
+/* background: linear-gradient(45deg, rgba(86, 58, 250, 0.9) 0%, rgba(116, 15, 214, 0.9) 100%), url("../img/hero-bg.jpg") center center no-repeat;
+  background-size: auto, auto;
+background-size: cover; */
+
+.topportion{
+  background: linear-gradient(45deg, rgba(86, 58, 250, 0.9) 0%, rgba(116, 15, 214, 0.9) 100%), url("../public/images/hero-bg.jpg") center center no-repeat;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar{
+  padding-top: 18px !important;
+ 
+}
+.navbar-brand{
+  color: #fff !important;
+  font-size: 35px !important;
+  margin-left: 100px !important;
+  margin-top: -16px !important;
+}
+.nav-link{
+  color: #e4e4e4 !important;
+  font-weight: bold !important;
+  /* text-decoration: 2.6px underline !important ; */
+  /* border-bottom: 2.6px solid transparent !important; */
+margin-right: 20px !important;
+font-size: 17px !important;
+}
+.nav-link:hover{
+  color: #fff !important;
+  padding-bottom: -50px !important;
+  /* border-bottom: 2.6px solid #fff !important; */
+}
+.nav-link:focus{
+  color: #fff !important;
+  font-size: 19px !important;
+  /* border-bottom: 2.6px solid #fff !important; */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.navbar .btn{
+  color: #fff !important;
+  border: 1.6px solid #e4e4e4 ;
+  border-radius: 5px;
+  margin-right: 50px;
+  width: 140px;
+  padding: 6.8px;
+  font-weight: 600 !important;
+}
+.navbar .btn:hover{
+  border: 2px solid #fff ;
+
+}
+/* --------------- hero-part ----------------- */
+.hero-part{
+  padding-top: 60px;
+  padding-bottom: 90px;
+}
+.hero-part .left{
+  padding: 70px 0px 80px 70px ;
+}
+.hero-part .left h1{
+color: #fff;
+letter-spacing: 0.6px;
+font-size: 55px;
+font-weight: bold;
+}
+.hero-part .left p{
+  color: #e8e6e6;
+  font-size: 24px;
+  font-weight: 600;
+  letter-spacing: 0.5px;
+}
+.hero-part .left Button{
+  margin-top: 15px;
+  padding: 7px 28px;
+  font-size: 20px;
+  border: 2px solid #fff;
+  font-weight: 600;
+}
+.hero-part .left Button:hover{
+  transition: 0.8s;
+  color: blue;
+}
+.hero-part .right img{
+  margin-left: 40px;
+  height: 500px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.hero-part .right img{
+  animation: up-down 2s ease-in-out infinite alternate-reverse both;
+}
+@keyframes up-down{
+0% {
+  transform: translateY(10px);
+}
+100% {
+  transform: translateY(-10px);
+}
+}
+
+/* ------------------ about part ------------------------- */
+
+.about{
+  margin-top: 120px;
+  padding-bottom: 60px;
+}
+.ableft h1{
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+font-size: 34px;
+margin-bottom: 10px;
+color: #2c4964;
+}
+.ableft p{
+  font-family: "Open Sans", sans-serif;
+  color: #898989;
+  font-size: 17.2px;
+ 
+}
+.ableft h5{
+  background: linear-gradient(45deg, #5846f9 0%, #7b27d8 100%);
+  padding: 10px 30px ;
+  border-radius: 5px;
+  color: #fff;
+  font-weight: 600;
+  font-size: 18px;
+  margin-top: 20px;
+  width: 160px;
+}
+.ableft h5:hover{
+  background: linear-gradient(40deg, #7b27d8 0%, #5846f9 100%);
+}
+
+.abright img{
+  height: 420px;
+}
+
+/* -------- count part ---------------- */
+
+.count{
+  margin-top: 60px;
+  background: url('../public/images/counts-bg.png');
+   padding: 85px ;
+   color: #fff;
+   display: flex;
+   flex-direction: row;
+   text-align: center;
+   font-family: "Poppins", sans-serif;
+   
+}
+.count p{
+  margin-top: -10px;
+ color: #e4e4e4;
+ letter-spacing: 0.5px;
+}
+.count h1{
+  font-size: 45px;
+  font-weight: 700;
+}
+/* ---------------- service part ----------------- */
+.services{
+  padding-top: 70px;
+  padding-bottom: 70px;
+  font-family: "Poppins", sans-serif;
+background-color: #f8f8f8;
+text-align: center;
+}
+.services h1{
+  font-weight: bold;
+}
+ .span1{
+  color: #5846f9;
+  margin-top: -45px;
+  margin-bottom: 20px;
+  font-size: 40px;
+}
+.services p{
+  padding-bottom: 20px;
+}
+.serve-col{
+  padding: 50px 50px;
+  height: 350px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+transition: all ease-in-out 0.3s;
+  
+  margin: 10px;
+  background-color: #fff;
+}
+.serve-col:hover {
+  box-shadow: 0px -25px 20px -20px rgba(170, 169, 169, 0.45),
+  25px 0px 20px -20px rgba(171, 171, 171, 0.382),
+  0px 25px 20px -20px rgba(165, 165, 165, 0.45),
+  -25px 0px 225px -20px rgba(168, 167, 167, 0.45);
+
 }
 
-.App-link {
-  color: #61dafb;
+.serve-col h3{
+  padding: 0px 40px;
+  text-align: center;
+  font-size: 28px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  color: #2c4964;
+}
+.serve-col .se-icon1{
+  margin-bottom: 25px;
+  background-color: rgba(234, 232, 232, 0.384) ;
+  border-radius: 50%;
+  width: 120px;
+  padding: 20px 38px;
+  color: #61b5f5 ;
+  transition: all ease-in-out 0.3s;
+}
+.serve-col:hover .se-icon1{
+  color: #fff ;
+  background-color: #61b5f5d6  ;
+}
+.serve-col .se-icon2{
+  margin-bottom: 25px;
+  background-color: rgba(234, 232, 232, 0.384) ;
+  border-radius: 50%;
+  width: 120px;
+  padding: 20px 38px;
+  color: #f59561 ;
+  transition: all ease-in-out 0.3s;
+}
+.serve-col:hover .se-icon2{
+  color: #fff ;
+  background-color: #f59561  ;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.serve-col .se-icon3{
+  margin-bottom: 25px;
+  background-color: rgba(234, 232, 232, 0.384) ;
+  border-radius: 50%;
+  width: 120px;
+  padding: 20px 38px;
+  color: #e80368; ;
+  transition: all ease-in-out 0.3s;
+}
+.serve-col:hover .se-icon3{
+  color: #fff ;
+  background-color: #e80368;  ;
+}
+
+.serve-col .se-icon4{
+  margin-bottom: 25px;
+  background-color: rgba(234, 232, 232, 0.384) ;
+  border-radius: 50%;
+  width: 120px;
+  padding: 20px 38px;
+  color: #ffbb2c; ;
+  transition: all ease-in-out 0.3s;
+}
+.serve-col:hover .se-icon4{
+  color: #fff ;
+  background-color: #ffbb2c;  ;
+}
+
+.serve-col .se-icon5{
+  margin-bottom: 25px;
+  background-color: rgba(234, 232, 232, 0.384) ;
+  border-radius: 50%;
+  width: 120px;
+  padding: 20px 38px;
+  color: #ff5828;;
+  transition: all ease-in-out 0.3s;
+}
+.serve-col:hover .se-icon5{
+  color: #fff ;
+  background-color: #ff5828;  ;
+}
+
+.serve-col .se-icon6{
+  margin-bottom: 25px;
+  background-color: rgba(234, 232, 232, 0.384) ;
+  border-radius: 50%;
+  width: 120px;
+  padding: 20px 38px;
+  color: #11dbcf; ;
+  transition: all ease-in-out 0.3s;
+}
+.serve-col:hover .se-icon6{
+  color: #fff ;
+  background-color: #11dbcf;  ;
+}
+
+/* ------------ features part ------------------ */
+
+.features{
+  padding: 80px;
+  text-align: center;
+}
+.features h1{
+  font-weight: bold;
+}
+.feature-txt{
+  padding-top: 26px;
+  text-align: left;
+}
+.feature-txt h4{
+  font-weight: bold;
+  padding-top: 10px;
+
+}
+.feature-txt p{
+  padding-left: 58px;
+  margin-top: -16px;
+  color: #898989;
+}
+
+/* ---------------- testimonials part --------------- */
+.testimonials{
+  padding-top: 80px;
+  padding-bottom: 80px;
+  background-color: #f9f8ff;
+  text-align: center;
+}
+.testimonials h1{
+  font-weight: bold;
+}
+.testimonials .card{
+  box-shadow: 0 0px 20px 0 rgba(0, 0, 0, 0.1);
+  border: none;
+  text-align: left;
+  margin: 20px;
+  padding: 16px;
+  padding-bottom: 60px;
+  margin-bottom: 132px;
+ 
+}
+.react-multi-carousel-dot--active button {
+  background: #1150e6 !important;
+
+}
+.react-multi-carousel-dot button {
+border-color: #1150e6 !important;
+background-color: #fff ;
+}
+.testimonials img{
+height:90px;
+width: 90px;
+border-radius: 50%;
+border: 4px solid #fff;
+position: absolute;
+margin-top: 132px;
+margin-left: 15px;
+box-shadow: 0 0px 20px 0 rgba(0, 0, 0, 0.155);
+}
+.testimonials .card h5{
+  position: absolute;
+margin-top: 225px;
+margin-left: 20px;
+font-weight: bold;
+}
+.testimonials .card p{
+  position: absolute;
+  margin-top: 248px;
+  margin-left: 20px;
+  color: #898989;
+ 
+}
+
+/* ------------- portfoilo part ----------- */
+
+.portfoilo{
+text-align: center;
+padding-top: 60px;
+padding-bottom: 60px;
+}
+
+.portfoilo h1{
+  font-weight: bold;
+}
+.portfoilo .port-top{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 40px;
+}
+.first-content{
+  display: flex;
+  flex-direction: row;
+}
+.first-content .i1 img{
+ margin: 10px;
+ position: absolute;
+ margin-left: -205px;
+  height: 290px;
+  width: 410px;
+}
+.portfoilo .nav-link {
+  color: #322f2f !important;
+}
+
+.first-content .i1 .txt{
+ 
+  height: 290px;
+  width: 410px;
+  margin: 10px;
+ position: relative;
+  background: rgb(0, 0, 0);
+  background: rgba(8, 70, 226, 0.675);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  visibility: hidden;
+}
+.first-content .i1:hover .txt{
+  /* border-radius: 50px; */
+  visibility: visible !important ;
+}
+.first-content .i1 .txt h2{
+  color: #d0cfcf;
+}
+
+/* ------------------pricing part --------------------- */
+
+.pricing{
+  padding-top: 60px;
+  background-color: #f9f8ff;
+  padding-bottom: 60px;
+  text-align: center;
+}
+.pricing .free{
+  margin: 5px;
+  background-color: #fff;
+ margin-top: 20px;
+ border-radius: 5px;
+  padding: 20px;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+}
+.pricing .paid{
+  margin: 5px;
+  padding: 20px;
+  border-radius: 5px;
+  background-color: #fff;
+  margin-top: 20px;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+}
+.pricing .button{
+  background: linear-gradient(42deg, #5846f9 0%, #7b27d8 100%);
+  display: inline-block;
+padding: 10px 35px;
+border-radius: 4px;
+color: #fff;
+transition: none;
+font-size: 15px;
+font-weight: 400;
+font-family: "Roboto", sans-serif;
+font-weight: 600;
+transition: 0.3s;
+}
+.pricing .button:hover{
+  background: linear-gradient(42deg, #5846f9 100%, #7b27d8 0%);
+  cursor: pointer;
+}
+.pricing h1{
+  font-weight: bold;
+}
+.pricing h4{
+  padding: 20px 15px;
+font-size: 16px;
+font-weight: 600;
+color: #2c4964;
+background: #f8f8f8;
+margin: -20px -20px 20px -20px;
+}
+.pricing h2{
+  color: #5846f9;
+  font-weight: bold;
+}
+.pricing h2 span{
+  color: #a9a8a8;
+  font-weight: 100;
+  font-size: 16px;
+}
+.pricing .head-wrap{
+  background: #5846f9;
+  color: #fff;
+  margin: -20px -20px 20px -20px;
+padding: 20px 15px;
+font-size: 16px;
+font-weight: 600;
+}
+.pricing .btn-wrap{
+  margin: 20px -20px -20px -20px;
+padding: 20px 15px;
+background: #f8f8f8;
+}
+
+/* ---------------- contact part ------------------- */
+
+.contact{
+  text-align: center;
+  padding-top: 60px;
+  padding-bottom: 50px;
+}
+.contact h1{
+  font-weight: bold;
+}
+.contact .form{
+  text-align: left;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  background: #f8f8f8;
+  padding: 31px;
+  margin-top: 16px;
+}
+.contact .form Button{
+  background-color: #1150e6;
+  margin-left: 200px;
+  margin-top: 10px;
+}
+.contact .adress{
+  margin: 16px 10px;
+ 
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  padding: 20px; 
+  background: #f8f8f8;
+}
+.contact .adress h3{
+  font-weight: bold;
+}
+
+/* ---------------- footer part ----------------- */
+
+.footer{
+  background: linear-gradient(45deg, rgba(86, 58, 250, 0.9) 0%, rgba(116, 15, 214, 0.9) 100%), url("../public/images/hero-bg.jpg") center center no-repeat;
+color: #fff;
+background-size: cover;
+  padding-top: 50px;
+  margin-bottom: 0px;
+  padding-bottom: 10px;
+}
+/* .footer .one p{
+  margin-bottom: 1px;
+} */
+.footer .subs{
+  background-color: rgba(139, 65, 224, 0.8);
+  border: 1px solid rgba(138, 65, 222, 0.8);
+  color: #fff;
+}
+.footer .subs:hover{
+  background-color: #007aff;
+}
+.footer h5{
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+.footer .copyright{
+  display: flex;
+  flex-direction: row;
+}
+.footer .copyright h1{
+  margin-left: 760px;
+  /* background-color: blue; */
 }
